changed colors to fix contrast

--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ text-align: center;
 font-size: 16pt;
 }
 p.modified{
-color: brown;
+color: rgb(251, 255, 0);
 }
 header {
   border-radius: 25px;
